--- a/poster.tex
+++ b/poster.tex
@@ -280,7 +280,7 @@ over-provided, $\varepsilon ^{VCG} < \varepsilon ^{0}$.
 \label{theorem:suboptimality}If preferences are as in III, the query response mechanism and cost function for the VCG mechanism are as displayed in IV, 
 the population distribution of $\gamma $ is given by $F_{\gamma }$ (bounded,
 absolutely continuous, everywhere differentiable, and with quantile function
-$Q$ satisfying the conditions such that \ref{eq:p_private} has a solution,
+$Q$ satisfying the conditions such that $\left(\ref{eq:p_private}\right)$ has a solution),
 the population distribution of $\eta$ has bounded support on $\left[ 0,\bar{%
 \eta}\right] $, and the population in the database is represented as a
 continuum with measure function $H$ (absolutely continuous, everywhere
